--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,12 +36,50 @@
 
 
 # ==== For Development works ======
+# version: '3.9'
+
+# services:
+#   db:
+#     container_name: quotes-db
+#     build: ./db
+#     environment:
+#       MYSQL_ROOT_PASSWORD: root
+#       MYSQL_DATABASE: quotesdb
+#       MYSQL_USER: user
+#       MYSQL_PASSWORD: password
+#     volumes:
+#       - db-data:/var/lib/mysql
+
+#   api:
+#     container_name: quotes-api
+#     build: ./api
+#     depends_on:
+#       - db
+#     environment:
+#       MYSQL_HOST: db
+#       MYSQL_USER: user
+#       MYSQL_PASSWORD: password
+#       MYSQL_DB: quotesdb
+#     ports:
+#       - "5001:5001"
+
+#   app:
+#     container_name: quotes-frontend
+#     build: ./app
+#     depends_on:
+#       - api
+#     ports:
+#       # - "80:5000" # for beanstalk
+#       - "5002:5002"
+
+# volumes:
+#   db-data:
 version: '3.9'
 
 services:
   db:
     container_name: quotes-db
-    build: ./db
+    image: ${DOCKER_USERNAME}/quotes-db:${IMAGE_TAG}
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: quotesdb
@@ -49,12 +87,21 @@ services:
       MYSQL_PASSWORD: password
     volumes:
       - db-data:/var/lib/mysql
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - app-network
 
   api:
     container_name: quotes-api
-    build: ./api
+    image: ${DOCKER_USERNAME}/quotes-api:${IMAGE_TAG}
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
       MYSQL_HOST: db
       MYSQL_USER: user
@@ -62,15 +109,38 @@ services:
       MYSQL_DB: quotesdb
     ports:
       - "5001:5001"
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5001/"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 40s
+    networks:
+      - app-network
 
   app:
     container_name: quotes-frontend
-    build: ./app
+    image: ${DOCKER_USERNAME}/quotes-frontend:${IMAGE_TAG}
     depends_on:
-      - api
+      api:
+        condition: service_healthy
     ports:
-      # - "80:5000" # for beanstalk
       - "5002:5002"
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5002/"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
+    networks:
+      - app-network
 
 volumes:
   db-data:
+    driver: local
+
+networks:
+  app-network:
+    driver: bridge
