--- a/.github/workflows/deploy-ssm.yml
+++ b/.github/workflows/deploy-ssm.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-  AWS_REGION: us-east-1
+  AWS_REGION: ap-south-1
   BLUE_TG_ARN: ${{ secrets.BLUE_TARGET_GROUP_ARN }}
   GREEN_TG_ARN: ${{ secrets.GREEN_TARGET_GROUP_ARN }}
   ALB_LISTENER_ARN: ${{ secrets.ALB_LISTENER_ARN }}
