--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,48 @@
+# version: '3.9'
+
+# services:
+#   db:
+#     build: ./db
+#     # image: mysql:5.7  # It's better to use a pre-built image for databases
+#     environment:
+#       MYSQL_ROOT_PASSWORD: root
+#       MYSQL_DATABASE: quotesdb
+#       MYSQL_USER: user
+#       MYSQL_PASSWORD: password
+#     # Removed volumes configuration as EB doesn't support named volumes
+
+#   api:
+#     build: ./api
+#     depends_on:
+#       - db
+#     environment:
+#       MYSQL_HOST: db
+#       MYSQL_USER: user
+#       MYSQL_PASSWORD: password
+#       MYSQL_DB: quotesdb
+#     # Removed ports configuration; EB handles port binding
+
+#   app:
+#     build: ./app
+#     depends_on:
+#       - api
+#     # Changed to map to port 80, which is what the EB load balancer will expect for HTTP traffic
+#     ports:
+#       - 80:5002  # Assuming your app.py is set to listen on port 5002
+
+# # Removed volumes section
+
+
+
+
+# ==== For Development works ======
 version: '3.9'
 
 services:
   db:
     container_name: quotes-db
-    build: ./db
+  #    build: ./db
+    image: asha515/quotes-db:latest
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: quotesdb
@@ -11,65 +50,29 @@ services:
       MYSQL_PASSWORD: password
     volumes:
       - db-data:/var/lib/mysql
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    networks:
-      - app-network
 
   api:
     container_name: quotes-api
-    build: ./api
+    #build: ./api
+    image: asha515/quotes-api:latest
     depends_on:
-      db:
-        condition: service_healthy
+      - db
     environment:
       MYSQL_HOST: db
       MYSQL_USER: user
       MYSQL_PASSWORD: password
       MYSQL_DB: quotesdb
-      APP_VERSION: ${IMAGE_TAG}
-      DEPLOYMENT_ENV: ${DEPLOYMENT_ENV:-blue}
     ports:
-      - "127.0.0.1:5001:5001"
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5001/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 40s
-    networks:
-      - app-network
+      - "5001:5001"
 
   app:
     container_name: quotes-frontend
-    build: ./app
+    image: asha515/quotes-frontend:latest
     depends_on:
-      api:
-        condition: service_healthy
-    environment:
-      APP_VERSION: ${IMAGE_TAG}
-      DEPLOYMENT_ENV: ${DEPLOYMENT_ENV:-blue}
+      - api
     ports:
-      - "127.0.0.1:5002:5002"
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5002/"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 30s
-    networks:
-      - app-network
+      # - "80:5000" # for beanstalk
+      - "5002:5002"
 
 volumes:
   db-data:
-    driver: local
-
-networks:
-  app-network:
-    driver: bridge
