--- a/.github/workflows/deploy-ssm.yml
+++ b/.github/workflows/deploy-ssm.yml
@@ -42,7 +42,6 @@ jobs:
           for SERVICE in db:quotes-db api:quotes-api app:quotes-frontend; do
             DIR=${SERVICE%%:*}
             NAME=${SERVICE##*:}
-
             docker buildx build --push \
               --cache-from type=registry,ref=$USER/$NAME:buildcache \
               --cache-to type=registry,ref=$USER/$NAME:buildcache,mode=max \
@@ -60,7 +59,8 @@ jobs:
           sed -i "s|build: ./api|image: $USER/quotes-api:$TAG|g" docker-compose.yml
           sed -i "s|build: ./app|image: $USER/quotes-frontend:$TAG|g" docker-compose.yml
 
-      - uses: actions/upload-artifact@v3
+      - name: Upload deployment files as artifact
+        uses: actions/upload-artifact@v4
         with:
           name: deployment-files
           path: |
@@ -90,7 +90,6 @@ jobs:
             --subnet-id ${{ env.PRIVATE_SUBNET_ID }} \
             --tag-specifications "ResourceType=instance,Tags=[{Key=Environment,Value=green},{Key=Version,Value=${{ needs.build.outputs.image_tag }}},{Key=Name,Value=quotes-app-green}]" \
             --query 'Instances[0].InstanceId' --output text)
-
           echo "instance_id=$INSTANCE_ID" >> $GITHUB_OUTPUT
           echo "Launched: $INSTANCE_ID"
 
@@ -98,12 +97,10 @@ jobs:
         run: |
           aws ec2 wait instance-running --instance-ids ${{ steps.launch.outputs.instance_id }}
           sleep 60
-
           for i in {1..20}; do
             STATUS=$(aws ssm describe-instance-information \
               --filters "Key=InstanceIds,Values=${{ steps.launch.outputs.instance_id }}" \
               --query 'InstanceInformationList[0].PingStatus' --output text 2>/dev/null || echo "Offline")
-
             [ "$STATUS" = "Online" ] && echo "SSM ready" && exit 0
             echo "Waiting for SSM ($i/20)..."
             sleep 10
@@ -117,7 +114,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
           name: deployment-files
 
@@ -131,10 +128,8 @@ jobs:
         run: |
           INSTANCE_ID=${{ needs.provision-green.outputs.green_instance_id }}
           TAG=${{ needs.build.outputs.image_tag }}
-
           tar czf deploy.tar.gz docker-compose.yml nginx-config deployment
           ENCODED=$(base64 -w 0 deploy.tar.gz)
-
           COMMAND_ID=$(aws ssm send-command \
             --instance-ids "$INSTANCE_ID" \
             --document-name "AWS-RunShellScript" \
@@ -148,24 +143,19 @@ jobs:
               'bash deployment/deploy.sh ${{ secrets.DOCKER_USERNAME }} $TAG ${{ secrets.DOCKER_PASSWORD }} green'
             ]" \
             --query 'Command.CommandId' --output text)
-
           echo "command_id=$COMMAND_ID" >> $GITHUB_ENV
 
       - name: Wait for deployment
         run: |
           INSTANCE_ID=${{ needs.provision-green.outputs.green_instance_id }}
-
           for i in {1..60}; do
             STATUS=$(aws ssm get-command-invocation \
               --command-id "${{ env.command_id }}" \
               --instance-id "$INSTANCE_ID" \
               --query 'Status' --output text 2>/dev/null || echo "Pending")
-
             echo "[$i/60] $STATUS"
-
             [ "$STATUS" = "Success" ] && echo "Deployment successful" && exit 0
             [[ "$STATUS" =~ ^(Failed|TimedOut|Cancelled)$ ]] && exit 1
-
             sleep 15
           done
           exit 1
@@ -185,22 +175,18 @@ jobs:
       - name: Run health check
         run: |
           INSTANCE_ID=${{ needs.provision-green.outputs.green_instance_id }}
-
           COMMAND_ID=$(aws ssm send-command \
             --instance-ids "$INSTANCE_ID" \
             --document-name "AWS-RunShellScript" \
             --parameters 'commands=["cd /home/ubuntu/quotes-app && bash deployment/health_check.sh"]' \
             --query 'Command.CommandId' --output text)
-
           for i in {1..30}; do
             STATUS=$(aws ssm get-command-invocation \
               --command-id "$COMMAND_ID" \
               --instance-id "$INSTANCE_ID" \
               --query 'Status' --output text 2>/dev/null || echo "Pending")
-
             [ "$STATUS" = "Success" ] && echo "Health check passed" && exit 0
             [[ "$STATUS" =~ ^(Failed|TimedOut)$ ]] && echo "Health check failed" && exit 1
-
             sleep 10
           done
 
@@ -219,24 +205,18 @@ jobs:
       - name: Register and wait for healthy
         run: |
           INSTANCE_ID=${{ needs.provision-green.outputs.green_instance_id }}
-
           aws elbv2 register-targets \
             --target-group-arn ${{ env.GREEN_TG_ARN }} \
             --targets Id=$INSTANCE_ID
-
           echo "Waiting for healthy status..."
-
           for i in {1..60}; do
             STATE=$(aws elbv2 describe-target-health \
               --target-group-arn ${{ env.GREEN_TG_ARN }} \
               --targets Id=$INSTANCE_ID \
               --query 'TargetHealthDescriptions[0].TargetHealth.State' --output text)
-
             echo "[$i/60] $STATE"
-
             [ "$STATE" = "healthy" ] && echo "Target healthy" && exit 0
             [ "$STATE" = "unhealthy" ] && [ $i -gt 30 ] && echo "Target unhealthy" && exit 1
-
             sleep 15
           done
 
@@ -257,7 +237,6 @@ jobs:
           aws elbv2 modify-listener \
             --listener-arn ${{ env.ALB_LISTENER_ARN }} \
             --default-actions Type=forward,ForwardConfig="{\"TargetGroups\":[{\"TargetGroupArn\":\"${{ env.BLUE_TG_ARN }}\",\"Weight\":80},{\"TargetGroupArn\":\"${{ env.GREEN_TG_ARN }}\",\"Weight\":20}]}"
-
           echo "Traffic: Blue 80%, Green 20%"
 
   approve:
@@ -294,7 +273,6 @@ jobs:
           aws elbv2 modify-listener \
             --listener-arn ${{ env.ALB_LISTENER_ARN }} \
             --default-actions Type=forward,TargetGroupArn=${{ env.GREEN_TG_ARN }}
-
           echo "Waiting for traffic to stabilize..."
           sleep 45
 
@@ -304,32 +282,25 @@ jobs:
           aws elbv2 deregister-targets \
             --target-group-arn ${{ env.BLUE_TG_ARN }} \
             --targets Id=${{ steps.blue.outputs.blue_id }}
-
           sleep 60
-          aws ec2 terminate-instances --instance-ids ${{ steps.blue.outputs.blue_id }}
+          aws ec2 terminate-instances --instance-ids ${{
+            steps.blue.outputs.blue_id }}
 
       - name: Promote green to blue
         run: |
           INSTANCE_ID=${{ needs.provision-green.outputs.green_instance_id }}
-
           aws ec2 create-tags \
             --resources $INSTANCE_ID \
             --tags Key=Environment,Value=blue Key=Name,Value=quotes-app-blue
-
           aws elbv2 register-targets \
             --target-group-arn ${{ env.BLUE_TG_ARN }} \
             --targets Id=$INSTANCE_ID
-
           sleep 30
-
           aws elbv2 modify-listener \
             --listener-arn ${{ env.ALB_LISTENER_ARN }} \
             --default-actions Type=forward,TargetGroupArn=${{ env.BLUE_TG_ARN }}
-
           sleep 15
-
           aws elbv2 deregister-targets \
             --target-group-arn ${{ env.GREEN_TG_ARN }} \
             --targets Id=$INSTANCE_ID
-
           echo "Deployment complete"
