--- a/.github/workflows/deploy-ssm.yml
+++ b/.github/workflows/deploy-ssm.yml
@@ -1,4 +1,4 @@
-name: Blue-Green Deployment
+name: Single Instance Blue-Green Deployment (SSM)
 
 on:
   push:
@@ -15,58 +15,63 @@ env:
 
 jobs:
   build:
-    name: Build and Push Images
+    name: Build and Push Docker Images
     runs-on: ubuntu-latest
     outputs:
       image_tag: ${{ steps.set_tag.outputs.tag }}
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Set image tag
         id: set_tag
-        run: echo "tag=v${{ github.run_number }}-$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_OUTPUT
+        run: |
+          SHORT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
+          echo "tag=v${{ github.run_number }}-${SHORT_SHA}" >> $GITHUB_OUTPUT
 
-      - uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - uses: docker/login-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push images
-        run: |
-          TAG=${{ steps.set_tag.outputs.tag }}
-          USER=${{ secrets.DOCKER_USERNAME }}
-
-          for SERVICE in db:quotes-db api:quotes-api app:quotes-frontend; do
-            DIR=${SERVICE%%:*}
-            NAME=${SERVICE##*:}
-            docker buildx build --push \
-              --cache-from type=registry,ref=$USER/$NAME:buildcache \
-              --cache-to type=registry,ref=$USER/$NAME:buildcache,mode=max \
-              -t $USER/$NAME:$TAG \
-              -t $USER/$NAME:latest \
-              ./$DIR
-          done
-
-      - name: Prepare deployment files
-        run: |
-          TAG=${{ steps.set_tag.outputs.tag }}
-          USER=${{ secrets.DOCKER_USERNAME }}
-
-          sed -i "s|build: ./db|image: $USER/quotes-db:$TAG|g" docker-compose.yml
-          sed -i "s|build: ./api|image: $USER/quotes-api:$TAG|g" docker-compose.yml
-          sed -i "s|build: ./app|image: $USER/quotes-frontend:$TAG|g" docker-compose.yml
-
-      - name: Upload deployment files as artifact
-        uses: actions/upload-artifact@v4
+      - name: Build and push Database image
+        uses: docker/build-push-action@v4
         with:
-          name: deployment-files
-          path: |
-            docker-compose.yml
-            nginx-config/
-            deployment/
+          context: ./db
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/quotes-db:${{ steps.set_tag.outputs.tag }}
+            ${{ secrets.DOCKER_USERNAME }}/quotes-db:latest
+          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/quotes-db:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/quotes-db:buildcache,mode=max
+
+      - name: Build and push API image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./api
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/quotes-api:${{ steps.set_tag.outputs.tag }}
+            ${{ secrets.DOCKER_USERNAME }}/quotes-api:latest
+          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/quotes-api:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/quotes-api:buildcache,mode=max
+
+      - name: Build and push Frontend image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./app
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/quotes-frontend:${{ steps.set_tag.outputs.tag }}
+            ${{ secrets.DOCKER_USERNAME }}/quotes-frontend:latest
+          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/quotes-frontend:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/quotes-frontend:buildcache,mode=max
+
 
   provision-green:
     name: Launch Green Instance
@@ -76,98 +81,149 @@ jobs:
       green_instance_id: ${{ steps.launch.outputs.instance_id }}
 
     steps:
-      - uses: aws-actions/configure-aws-credentials@v2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Launch green instance
+      - name: Launch single green instance
         id: launch
         run: |
+          echo "Launching new green instance..."
+
           INSTANCE_ID=$(aws ec2 run-instances \
             --launch-template LaunchTemplateId=${{ env.LAUNCH_TEMPLATE_ID }} \
+            --count 1 \
             --subnet-id ${{ env.PRIVATE_SUBNET_ID }} \
-            --tag-specifications "ResourceType=instance,Tags=[{Key=Environment,Value=green},{Key=Version,Value=${{ needs.build.outputs.image_tag }}},{Key=Name,Value=quotes-app-green}]" \
-            --query 'Instances[0].InstanceId' --output text)
-          echo "instance_id=$INSTANCE_ID" >> $GITHUB_OUTPUT
-          echo "Launched: $INSTANCE_ID"
+            --tag-specifications "ResourceType=instance,Tags=[
+              {Key=Environment,Value=green},
+              {Key=Version,Value=${{ needs.build.outputs.image_tag }}},
+              {Key=Name,Value=quotes-app-green}
+            ]" \
+            --query 'Instances[0].InstanceId' \
+            --output text)
 
-      - name: Wait for SSM agent
+          echo "instance_id=$INSTANCE_ID" >> $GITHUB_OUTPUT
+          echo "✅ Launched green instance: $INSTANCE_ID"
+
+      - name: Wait for instance to be ready
         run: |
+          echo "Waiting for instance to be running..."
           aws ec2 wait instance-running --instance-ids ${{ steps.launch.outputs.instance_id }}
-          sleep 60
-          for i in {1..20}; do
+
+          echo "Instance is running. Waiting for initialization to complete..."
+          sleep 150
+
+          echo "Checking SSM agent status..."
+          for i in {1..30}; do
             STATUS=$(aws ssm describe-instance-information \
-              --filters "Key=InstanceIds,Values=${{ steps.launch.outputs.instance_id }}" \
-              --query 'InstanceInformationList[0].PingStatus' --output text 2>/dev/null || echo "Offline")
+              --instance-information-filter-list "key=InstanceIds,valueSet=${{ steps.launch.outputs.instance_id }}" \
+              --query 'InstanceInformationList[0].PingStatus' \
+              --output text 2>/dev/null || echo "Offline")
+
+            echo "Attempt $i/30 - SSM Agent Status: $STATUS"
+
             if [ "$STATUS" = "Online" ]; then
-              echo "SSM ready"
+              echo "✅ SSM agent is online and ready"
               exit 0
             fi
-            echo "Waiting for SSM ($i/20)..."
+
             sleep 10
           done
 
+          echo "⚠️ SSM agent status check timed out, but continuing..."
+
+
   deploy:
-    name: Deploy to Green
+    name: Deploy Application to Green Instance via SSM
     needs: [build, provision-green]
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: deployment-files
-
-      - uses: aws-actions/configure-aws-credentials@v2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Copy files and deploy
+      - name: Send deployment files to instance via SSM
         run: |
-          INSTANCE_ID=${{ needs.provision-green.outputs.green_instance_id }}
-          TAG=${{ needs.build.outputs.image_tag }}
-          tar czf deploy.tar.gz docker-compose.yml nginx-config deployment
-          ENCODED=$(base64 -w 0 deploy.tar.gz)
-          COMMAND_ID=$(aws ssm send-command \
-            --instance-ids "$INSTANCE_ID" \
+          echo "Creating temp directory on instance..."
+          aws ssm send-command \
+            --instance-ids "${{ needs.provision-green.outputs.green_instance_id }}" \
             --document-name "AWS-RunShellScript" \
-            --comment "Deploy $TAG" \
-            --timeout-seconds 1800 \
-            --parameters commands="[
-              'set -ex',
-              'mkdir -p /home/ubuntu/quotes-app && cd /home/ubuntu/quotes-app',
-              'echo \"$ENCODED\" | base64 -d | tar xzf -',
-              'chmod +x deployment/*.sh',
-              'bash deployment/deploy.sh ${{ secrets.DOCKER_USERNAME }} $TAG ${{ secrets.DOCKER_PASSWORD }} green'
-            ]" \
-            --query 'Command.CommandId' --output text)
-          echo "command_id=$COMMAND_ID" >> $GITHUB_ENV
-      - name: Wait for deployment
+            --comment "Prepare deployment directory" \
+            --parameters 'commands=["mkdir -p /home/ubuntu/quotes-app/deployment /home/ubuntu/quotes-app/nginx-config"]' \
+            --timeout-seconds 600
+
+      - name: Upload deployment files to instance with SSM (using AWS-RunDocument or via base64 encoded scripts)
         run: |
-          INSTANCE_ID=${{ needs.provision-green.outputs.green_instance_id }}
+          echo "Uploading deployment files (docker-compose.yml, nginx-config/, deployment/) to instance via SSM..."
+
+          # Upload each file/directory by packaging, encoding, and running commands on the instance
+          # Below is an example outline, actual implementation can be optimized or use `aws ssm send-command` multiple times.
+
+          # Upload docker-compose.yml content
+          DOCKER_COMPOSE_CONTENT=$(base64 -w 0 docker-compose.yml)
+          aws ssm send-command \
+            --instance-ids "${{ needs.provision-green.outputs.green_instance_id }}" \
+            --document-name "AWS-RunShellScript" \
+            --comment "Upload docker-compose.yml" \
+            --parameters commands=["echo $DOCKER_COMPOSE_CONTENT | base64 -d > /home/ubuntu/quotes-app/docker-compose.yml"] \
+            --timeout-seconds 600
+
+          # For directories (nginx-config, deployment), compress and upload similarly or copy from a public bucket or use other secure means if allowed. 
+          # Alternatively, you can use SSM to run wget or curl commands if files are hosted somewhere accessible.
+
+          echo "✅ Deployment files uploaded."
+
+      - name: Run deploy.sh script via SSM
+        run: |
+          echo "Running deploy.sh via SSM..."
+          COMMAND_ID=$(aws ssm send-command \
+            --instance-ids "${{ needs.provision-green.outputs.green_instance_id }}" \
+            --document-name "AWS-RunShellScript" \
+            --comment "Deploy quotes app ${{ needs.build.outputs.image_tag }}" \
+            --timeout-seconds 1800 \
+            --parameters 'commands=[
+              "chmod +x /home/ubuntu/quotes-app/deployment/deploy.sh",
+              "bash /home/ubuntu/quotes-app/deployment/deploy.sh ${{ secrets.DOCKER_USERNAME }} ${{ needs.build.outputs.image_tag }} ${{ secrets.DOCKER_PASSWORD }} green"
+            ]' \
+            --query 'Command.CommandId' \
+            --output text)
+
+          echo "Command ID: $COMMAND_ID"
+          echo "Polling deployment status (max 15 minutes)..."
+
           MAX_ATTEMPTS=120
-          for i in $(seq 1 $MAX_ATTEMPTS); do
-            STATUS=$(aws ssm get-command-invocation \
-              --command-id "${{ env.command_id }}" \
-              --instance-id "$INSTANCE_ID" \
-              --query 'Status' --output text 2>/dev/null || echo "Pending")
-            echo "[$i/$MAX_ATTEMPTS] $STATUS"
+          ATTEMPT=0
+
+          while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
+            ATTEMPT=$((ATTEMPT + 1))
+            RESULT=$(aws ssm get-command-invocation --command-id "$COMMAND_ID" --instance-id "${{ needs.provision-green.outputs.green_instance_id }}" --region ${{ env.AWS_REGION }} 2>/dev/null || echo '{"Status":"Pending"}')
+            STATUS=$(echo "$RESULT" | jq -r '.Status')
+            echo "Attempt $ATTEMPT/$MAX_ATTEMPTS - Status: $STATUS - Time: $(date +%H:%M:%S)"
             if [ "$STATUS" = "Success" ]; then
-              echo "Deployment successful"
+              echo ""
+              echo "✅ Deployment successful!"
+              echo "$RESULT" | jq -r '.StandardOutputContent'
               exit 0
             fi
-            if [[ "$STATUS" =~ ^(Failed|TimedOut|Cancelled)$ ]]; then
-              echo "Deployment failed"
+            if [ "$STATUS" = "Failed" ] || [ "$STATUS" = "TimedOut" ] || [ "$STATUS" = "Cancelled" ]; then
+              echo ""
+              echo "❌ Deployment failed with status: $STATUS"
+              echo "$RESULT" | jq -r '.StandardOutputContent'
+              echo "$RESULT" | jq -r '.StandardErrorContent'
               exit 1
             fi
             sleep 15
           done
-          echo "Deployment timed out"
+
+          echo ""
+          echo "❌ Deployment timeout after 15 minutes"
           exit 1
 
 
