--- a/.github/workflows/deploy-ssm.yml
+++ b/.github/workflows/deploy-ssm.yml
@@ -1,4 +1,4 @@
-name: Single Instance Blue-Green Deployment (SSM)
+name: Single Instance Blue-Green Deployment
 
 on:
   push:
@@ -19,22 +19,17 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       image_tag: ${{ steps.set_tag.outputs.tag }}
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set image tag
-        id: set_tag
+      - id: set_tag
         run: |
           SHORT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
           echo "tag=v${{ github.run_number }}-${SHORT_SHA}" >> $GITHUB_OUTPUT
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - uses: docker/setup-buildx-action@v2
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -72,6 +67,19 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/quotes-frontend:buildcache
           cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/quotes-frontend:buildcache,mode=max
 
+      - name: Upload deployment files to S3
+        run: |
+          sed -i "s|build: ./db|image: ${{ secrets.DOCKER_USERNAME }}/quotes-db:${{ steps.set_tag.outputs.tag }}|g" docker-compose.yml
+          sed -i "s|build: ./api|image: ${{ secrets.DOCKER_USERNAME }}/quotes-api:${{ steps.set_tag.outputs.tag }}|g" docker-compose.yml
+          sed -i "s|build: ./app|image: ${{ secrets.DOCKER_USERNAME }}/quotes-frontend:${{ steps.set_tag.outputs.tag }}|g" docker-compose.yml
+
+          aws s3 cp docker-compose.yml s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${{ steps.set_tag.outputs.tag }}/
+          aws s3 cp nginx-config/ s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${{ steps.set_tag.outputs.tag }}/nginx-config/ --recursive
+          aws s3 cp deployment/ s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${{ steps.set_tag.outputs.tag }}/deployment/ --recursive
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ env.AWS_REGION }}
 
   provision-green:
     name: Launch Green Instance
@@ -79,20 +87,15 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       green_instance_id: ${{ steps.launch.outputs.instance_id }}
-
     steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+      - uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Launch single green instance
-        id: launch
+      - id: launch
         run: |
-          echo "Launching new green instance..."
-
           INSTANCE_ID=$(aws ec2 run-instances \
             --launch-template LaunchTemplateId=${{ env.LAUNCH_TEMPLATE_ID }} \
             --count 1 \
@@ -106,170 +109,72 @@ jobs:
             --output text)
 
           echo "instance_id=$INSTANCE_ID" >> $GITHUB_OUTPUT
-          echo "✅ Launched green instance: $INSTANCE_ID"
 
-      - name: Wait for instance to be ready
-        run: |
-          echo "Waiting for instance to be running..."
+      - run: |
           aws ec2 wait instance-running --instance-ids ${{ steps.launch.outputs.instance_id }}
-
-          echo "Instance is running. Waiting for initialization to complete..."
           sleep 150
 
-          echo "Checking SSM agent status..."
+      - run: |
           for i in {1..30}; do
             STATUS=$(aws ssm describe-instance-information \
               --instance-information-filter-list "key=InstanceIds,valueSet=${{ steps.launch.outputs.instance_id }}" \
               --query 'InstanceInformationList[0].PingStatus' \
               --output text 2>/dev/null || echo "Offline")
-
-            echo "Attempt $i/30 - SSM Agent Status: $STATUS"
-
             if [ "$STATUS" = "Online" ]; then
-              echo "✅ SSM agent is online and ready"
               exit 0
             fi
-
             sleep 10
           done
 
-          echo "⚠️ SSM agent status check timed out, but continuing..."
-
-
   deploy:
-    name: Deploy Application to Green Instance via SSM
+    name: Deploy Application to Green
     needs: [build, provision-green]
     runs-on: ubuntu-latest
-
     steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+      - uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Send deployment files to instance via SSM
-        run: |
-          echo "Creating temp directory on instance..."
-          aws ssm send-command \
-            --instance-ids "${{ needs.provision-green.outputs.green_instance_id }}" \
-            --document-name "AWS-RunShellScript" \
-            --comment "Prepare deployment directory" \
-            --parameters 'commands=["mkdir -p /home/ubuntu/quotes-app/deployment /home/ubuntu/quotes-app/nginx-config"]' \
-            --timeout-seconds 600
-
-      - name: Upload deployment files to instance with SSM (using AWS-RunDocument or via base64 encoded scripts)
-        run: |
-          echo "Uploading deployment files (docker-compose.yml, nginx-config/, deployment/) to instance via SSM..."
-
-          # Upload each file/directory by packaging, encoding, and running commands on the instance
-          # Below is an example outline, actual implementation can be optimized or use `aws ssm send-command` multiple times.
-
-          # Upload docker-compose.yml content
-          DOCKER_COMPOSE_CONTENT=$(base64 -w 0 docker-compose.yml)
-          aws ssm send-command \
-            --instance-ids "${{ needs.provision-green.outputs.green_instance_id }}" \
-            --document-name "AWS-RunShellScript" \
-            --comment "Upload docker-compose.yml" \
-            --parameters commands=["echo $DOCKER_COMPOSE_CONTENT | base64 -d > /home/ubuntu/quotes-app/docker-compose.yml"] \
-            --timeout-seconds 600
-
-          # For directories (nginx-config, deployment), compress and upload similarly or copy from a public bucket or use other secure means if allowed. 
-          # Alternatively, you can use SSM to run wget or curl commands if files are hosted somewhere accessible.
-
-          echo "✅ Deployment files uploaded."
-
-      - name: Run deploy.sh script via SSM
-        run: |
-          echo "Running deploy.sh via SSM..."
+      - run: |
           COMMAND_ID=$(aws ssm send-command \
             --instance-ids "${{ needs.provision-green.outputs.green_instance_id }}" \
             --document-name "AWS-RunShellScript" \
-            --comment "Deploy quotes app ${{ needs.build.outputs.image_tag }}" \
-            --timeout-seconds 1800 \
             --parameters 'commands=[
-              "chmod +x /home/ubuntu/quotes-app/deployment/deploy.sh",
-              "bash /home/ubuntu/quotes-app/deployment/deploy.sh ${{ secrets.DOCKER_USERNAME }} ${{ needs.build.outputs.image_tag }} ${{ secrets.DOCKER_PASSWORD }} green"
+              "#!/bin/bash",
+              "set -ex",
+              "sudo mkdir -p /home/ubuntu/quotes-app/deployment /home/ubuntu/quotes-app/nginx-config",
+              "sudo chown -R ubuntu:ubuntu /home/ubuntu/quotes-app",
+              "cd /home/ubuntu/quotes-app",
+              "aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${{ needs.build.outputs.image_tag }}/docker-compose.yml .",
+              "aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${{ needs.build.outputs.image_tag }}/nginx-config/ ./nginx-config/ --recursive",
+              "aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${{ needs.build.outputs.image_tag }}/deployment/ ./deployment/ --recursive",
+              "chmod +x deployment/*.sh",
+              "bash deployment/deploy.sh ${{ secrets.DOCKER_USERNAME }} ${{ needs.build.outputs.image_tag }} ${{ secrets.DOCKER_PASSWORD }} green"
             ]' \
-            --query 'Command.CommandId' \
-            --output text)
-
-          echo "Command ID: $COMMAND_ID"
-          echo "Polling deployment status (max 15 minutes)..."
+            --timeout-seconds 1800 --query 'Command.CommandId' --output text)
 
           MAX_ATTEMPTS=120
           ATTEMPT=0
-
           while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
             ATTEMPT=$((ATTEMPT + 1))
             RESULT=$(aws ssm get-command-invocation --command-id "$COMMAND_ID" --instance-id "${{ needs.provision-green.outputs.green_instance_id }}" --region ${{ env.AWS_REGION }} 2>/dev/null || echo '{"Status":"Pending"}')
             STATUS=$(echo "$RESULT" | jq -r '.Status')
-            echo "Attempt $ATTEMPT/$MAX_ATTEMPTS - Status: $STATUS - Time: $(date +%H:%M:%S)"
             if [ "$STATUS" = "Success" ]; then
-              echo ""
-              echo "✅ Deployment successful!"
-              echo "$RESULT" | jq -r '.StandardOutputContent'
               exit 0
             fi
             if [ "$STATUS" = "Failed" ] || [ "$STATUS" = "TimedOut" ] || [ "$STATUS" = "Cancelled" ]; then
-              echo ""
-              echo "❌ Deployment failed with status: $STATUS"
-              echo "$RESULT" | jq -r '.StandardOutputContent'
-              echo "$RESULT" | jq -r '.StandardErrorContent'
               exit 1
             fi
             sleep 15
           done
-
-          echo ""
-          echo "❌ Deployment timeout after 15 minutes"
           exit 1
 
-
-
-  health-check:
-    name: Health Check
-    needs: [provision-green, deploy]
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Run health check
-        run: |
-          INSTANCE_ID=${{ needs.provision-green.outputs.green_instance_id }}
-          COMMAND_ID=$(aws ssm send-command \
-            --instance-ids "$INSTANCE_ID" \
-            --document-name "AWS-RunShellScript" \
-            --parameters 'commands=["cd /home/ubuntu/quotes-app && bash deployment/health_check.sh"]' \
-            --query 'Command.CommandId' --output text)
-          for i in {1..30}; do
-            STATUS=$(aws ssm get-command-invocation \
-              --command-id "$COMMAND_ID" \
-              --instance-id "$INSTANCE_ID" \
-              --query 'Status' --output text 2>/dev/null || echo "Pending")
-            echo "Attempt $i: $STATUS"
-            if [ "$STATUS" = "Success" ]; then
-              echo "Health check passed"
-              exit 0
-            fi
-            if [[ "$STATUS" =~ ^(Failed|TimedOut)$ ]]; then
-              echo "Health check failed"
-              exit 1
-            fi
-            sleep 10
-          done
-
   register-green:
-    name: Register Green
-    needs: [provision-green, health-check]
+    name: Register Green and Wait for Healthy Status
+    needs: provision-green
     runs-on: ubuntu-latest
-
     steps:
       - uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -277,36 +182,31 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Register and wait for healthy
-        run: |
-          INSTANCE_ID=${{ needs.provision-green.outputs.green_instance_id }}
-          aws elbv2 register-targets \
-            --target-group-arn ${{ env.GREEN_TG_ARN }} \
-            --targets Id=$INSTANCE_ID
-          echo "Waiting for healthy status..."
-          for i in {1..60}; do
-            STATE=$(aws elbv2 describe-target-health \
-              --target-group-arn ${{ env.GREEN_TG_ARN }} \
-              --targets Id=$INSTANCE_ID \
-              --query 'TargetHealthDescriptions[0].TargetHealth.State' \
-              --output text)
-            echo "[$i/60] $STATE"
-            if [ "$STATE" = "healthy" ]; then
-              echo "Target healthy"
+      - run: |
+          aws elbv2 register-targets --target-group-arn ${{ env.GREEN_TG_ARN }} --targets Id=${{ needs.provision-green.outputs.green_instance_id }}
+
+          MAX_ATTEMPTS=40
+          ATTEMPT=0
+
+          while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
+            ATTEMPT=$((ATTEMPT + 1))
+            HEALTH_INFO=$(aws elbv2 describe-target-health --target-group-arn ${{ env.GREEN_TG_ARN }} --targets Id=${{ needs.provision-green.outputs.green_instance_id }} 2>/dev/null || echo '{"TargetHealthDescriptions":[{"TargetHealth":{"State":"unknown"}}]}')
+            STATE=$(echo "$HEALTH_INFO" | jq -r '.TargetHealthDescriptions[0].TargetHealth.State // "unknown"')
+
+            if [ "$STATE" = "healthy" ] || [ "$STATE" = "unused" ]; then
               exit 0
             fi
-            if [ "$STATE" = "unhealthy" ] && [ $i -gt 30 ]; then
-              echo "Target unhealthy"
-              exit 1
-            fi
-            sleep 15
+
+            sleep 30
           done
+
+          echo "❌ Timeout: Target did not become healthy"
+          exit 1
 
   configure-canary:
-    name: Canary 20%
+    name: Configure 20% Canary Traffic
     needs: [provision-green, register-green]
     runs-on: ubuntu-latest
-
     steps:
       - uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -314,27 +214,29 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Configure traffic split
-        run: |
+      - run: |
           aws elbv2 modify-listener \
             --listener-arn ${{ env.ALB_LISTENER_ARN }} \
-            --default-actions Type=forward,ForwardConfig='{"TargetGroups":[{"TargetGroupArn":"'"${{ env.BLUE_TG_ARN }}"'","Weight":80},{"TargetGroupArn":"'"${{ env.GREEN_TG_ARN }}"'","Weight":20}]}'
-          echo "Traffic: Blue 80%, Green 20%"
+            --default-actions Type=forward,ForwardConfig="{
+              TargetGroups=[
+                {TargetGroupArn=${{ env.BLUE_TG_ARN }},Weight=80},
+                {TargetGroupArn=${{ env.GREEN_TG_ARN }},Weight=20}
+              ],
+              TargetGroupStickinessConfig={Enabled=false}
+            }"
 
   approve:
-    name: QA Approval
+    name: QA Approval Gate
     needs: configure-canary
     runs-on: ubuntu-latest
     environment: production-approval
-
     steps:
-      - run: echo "Awaiting QA approval"
+      - run: echo "Deployment paused for QA testing."
 
   complete-deployment:
-    name: Complete Deployment
+    name: Complete Blue-Green Switch
     needs: [provision-green, approve]
     runs-on: ubuntu-latest
-
     steps:
       - uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -342,46 +244,27 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Get blue instance
-        id: blue
+      - id: blue
         run: |
           BLUE_ID=$(aws ec2 describe-instances \
             --filters "Name=tag:Environment,Values=blue" "Name=instance-state-name,Values=running" \
             --query 'Reservations[0].Instances[0].InstanceId' --output text 2>/dev/null || echo "")
           echo "blue_id=$BLUE_ID" >> $GITHUB_OUTPUT
 
-      - name: Route 100% to green
-        run: |
-          aws elbv2 modify-listener \
-            --listener-arn ${{ env.ALB_LISTENER_ARN }} \
-            --default-actions Type=forward,TargetGroupArn=${{ env.GREEN_TG_ARN }}
-          echo "Waiting for traffic to stabilize..."
-          sleep 45
+      - run: |
+          aws elbv2 modify-listener --listener-arn ${{ env.ALB_LISTENER_ARN }} --default-actions Type=forward,TargetGroupArn=${{ env.GREEN_TG_ARN }}
 
-      - name: Cleanup blue instance
-        if: steps.blue.outputs.blue_id != '' && steps.blue.outputs.blue_id != 'None'
-        run: |
-          aws elbv2 deregister-targets \
-            --target-group-arn ${{ env.BLUE_TG_ARN }} \
-            --targets Id=${{ steps.blue.outputs.blue_id }}
-          sleep 60
-          aws ec2 terminate-instances --instance-ids ${{ steps.blue.outputs.blue_id }}
+      - run: |
+          if [ "${{ steps.blue.outputs.blue_id }}" != "" ] && [ "${{ steps.blue.outputs.blue_id }}" != "None" ]; then
+            aws elbv2 deregister-targets --target-group-arn ${{ env.BLUE_TG_ARN }} --targets Id=${{ steps.blue.outputs.blue_id }}
+            sleep 30
+            aws ec2 terminate-instances --instance-ids ${{ steps.blue.outputs.blue_id }}
+          fi
 
-      - name: Promote green to blue
-        run: |
-          INSTANCE_ID=${{ needs.provision-green.outputs.green_instance_id }}
-          aws ec2 create-tags \
-            --resources $INSTANCE_ID \
-            --tags Key=Environment,Value=blue Key=Name,Value=quotes-app-blue
-          aws elbv2 register-targets \
-            --target-group-arn ${{ env.BLUE_TG_ARN }} \
-            --targets Id=$INSTANCE_ID
-          sleep 30
-          aws elbv2 modify-listener \
-            --listener-arn ${{ env.ALB_LISTENER_ARN }} \
-            --default-actions Type=forward,TargetGroupArn=${{ env.BLUE_TG_ARN }}
+      - run: |
+          aws ec2 create-tags --resources ${{ needs.provision-green.outputs.green_instance_id }} --tags Key=Environment,Value=blue Key=Name,Value=quotes-app-blue
+          aws elbv2 register-targets --target-group-arn ${{ env.BLUE_TG_ARN }} --targets Id=${{ needs.provision-green.outputs.green_instance_id }}
           sleep 15
-          aws elbv2 deregister-targets \
-            --target-group-arn ${{ env.GREEN_TG_ARN }} \
-            --targets Id=$INSTANCE_ID
-          echo "Deployment complete"
+          aws elbv2 modify-listener --listener-arn ${{ env.ALB_LISTENER_ARN }} --default-actions Type=forward,TargetGroupArn=${{ env.BLUE_TG_ARN }}
+          sleep 10
+          aws elbv2 deregister-targets --target-group-arn ${{ env.GREEN_TG_ARN }} --targets Id=${{ needs.provision-green.outputs.green_instance_id }}
