--- a/.github/workflows/deploy-ssm.yml
+++ b/.github/workflows/deploy-ssm.yml
@@ -103,59 +103,121 @@ jobs:
       - run: |
           aws ec2 wait instance-running --instance-ids ${{ steps.launch.outputs.instance_id }}
           sleep 150
-      - run: |
-          for i in {1..30}; do
-            STATUS=$(aws ssm describe-instance-information \
-              --instance-information-filter-list "key=InstanceIds,valueSet=${{ steps.launch.outputs.instance_id }}" \
-              --query 'InstanceInformationList[0].PingStatus' --output text 2>/dev/null || echo "Offline")
-            if [ "$STATUS" = "Online" ]; then
-              exit 0
-            fi
-            sleep 10
-          done
+      # - run: |
+      #     for i in {1..30}; do
+      #       STATUS=$(aws ssm describe-instance-information \
+      #         --instance-information-filter-list "key=InstanceIds,valueSet=${{ steps.launch.outputs.instance_id }}" \
+      #         --query 'InstanceInformationList[0].PingStatus' --output text 2>/dev/null || echo "Offline")
+      #       if [ "$STATUS" = "Online" ]; then
+      #         exit 0
+      #       fi
+      #       sleep 10
+      #     done
 
+  
   deploy:
     name: Deploy Application to Green
-    needs: provision-green
+    needs: [build, provision-green]
     runs-on: ubuntu-latest
+
     steps:
-      - uses: aws-actions/configure-aws-credentials@v2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
-      - run: |
+
+      - name: Deploy via SSM
+        run: |
+          echo "=== Deploying to green instance ==="
+          echo "Instance ID: ${{ needs.provision-green.outputs.green_instance_id }}"
+          echo "Image Tag: ${{ needs.build.outputs.image_tag }}"
+
           COMMAND_ID=$(aws ssm send-command \
             --instance-ids "${{ needs.provision-green.outputs.green_instance_id }}" \
             --document-name "AWS-RunShellScript" \
+            --comment "Deploy quotes app ${{ needs.build.outputs.image_tag }}" \
+            --timeout-seconds 1800 \
             --parameters 'commands=[
               "#!/bin/bash",
               "set -ex",
+              "echo \"=== Deployment Started at $(date) ===\"",
               "sudo mkdir -p /home/ubuntu/quotes-app/deployment /home/ubuntu/quotes-app/nginx-config",
               "sudo chown -R ubuntu:ubuntu /home/ubuntu/quotes-app",
               "cd /home/ubuntu/quotes-app",
+              "pwd",
+              "echo \"AWS CLI: $(aws --version)\"",
+              "echo \"Docker: $(docker --version)\"",
+              "echo \"Docker Compose: $(docker-compose --version)\"",
+              "",
+              "echo \"Downloading files from S3...\"",
               "aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${{ needs.build.outputs.image_tag }}/docker-compose.yml .",
               "aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${{ needs.build.outputs.image_tag }}/nginx-config/ ./nginx-config/ --recursive",
               "aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${{ needs.build.outputs.image_tag }}/deployment/ ./deployment/ --recursive",
+              "",
               "chmod +x deployment/*.sh",
-              "bash deployment/deploy.sh ${{ secrets.DOCKER_USERNAME }} ${{ needs.build.outputs.image_tag }} ${{ secrets.DOCKER_PASSWORD }} green"
-            ]' --timeout-seconds 1800 --query 'Command.CommandId' --output text)
+              "echo \"Files downloaded:\"",
+              "ls -la deployment",
+              "",
+              "echo \"Starting deployment script...\"",
+              "bash deployment/deploy.sh ${{ secrets.DOCKER_USERNAME }} ${{ needs.build.outputs.image_tag }} ${{ secrets.DOCKER_PASSWORD }} green",
+              "",
+              "echo \"=== Deployment Finished at $(date) ===\""
+            ]' \
+            --query 'Command.CommandId' \
+            --output text)
+
+          echo "Command ID: $COMMAND_ID"
+          echo "Polling deployment status (max 15 minutes)..."
 
           MAX_ATTEMPTS=120
           ATTEMPT=0
+
           while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
             ATTEMPT=$((ATTEMPT + 1))
-            RESULT=$(aws ssm get-command-invocation --command-id "$COMMAND_ID" --instance-id "${{ needs.provision-green.outputs.green_instance_id }}" --region ${{ env.AWS_REGION }} 2>/dev/null || echo '{"Status":"Pending"}')
+
+            RESULT=$(aws ssm get-command-invocation \
+              --command-id "$COMMAND_ID" \
+              --instance-id "${{ needs.provision-green.outputs.green_instance_id }}" \
+              --region ${{ env.AWS_REGION }} 2>/dev/null || echo '{"Status":"Pending"}')
+
             STATUS=$(echo "$RESULT" | jq -r '.Status')
+            echo "Attempt $ATTEMPT/$MAX_ATTEMPTS - Status: $STATUS - Time: $(date +%H:%M:%S)"
+
             if [ "$STATUS" = "Success" ]; then
+              echo ""
+              echo "✅ Deployment successful!"
+              echo ""
+              echo "=== Deployment Output ==="
+              echo "$RESULT" | jq -r '.StandardOutputContent'
               exit 0
             fi
+
             if [ "$STATUS" = "Failed" ] || [ "$STATUS" = "TimedOut" ] || [ "$STATUS" = "Cancelled" ]; then
+              echo ""
+              echo "❌ Deployment failed with status: $STATUS"
+              echo ""
+              echo "=== Standard Output ==="
+              echo "$RESULT" | jq -r '.StandardOutputContent'
+              echo ""
+              echo "=== Standard Error ==="
+              echo "$RESULT" | jq -r '.StandardErrorContent'
               exit 1
             fi
+
             sleep 15
           done
+
+          echo ""
+          echo "❌ Deployment timeout after 15 minutes"
+          RESULT=$(aws ssm get-command-invocation \
+            --command-id "$COMMAND_ID" \
+            --instance-id "${{ needs.provision-green.outputs.green_instance_id }}" \
+            --region ${{ env.AWS_REGION }})
+          echo "$RESULT" | jq -r '.StandardOutputContent'
           exit 1
+
 
   register-green:
     name: Register Green and Wait for Healthy Status
