--- a/.github/workflows/deploy-ssm.yml
+++ b/.github/workflows/deploy-ssm.yml
@@ -62,7 +62,7 @@ jobs:
           aws s3 cp docker-compose.yml s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${TAG}/
           aws s3 cp deployment/ s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${TAG}/deployment/ --recursive
 
-          echo "Deployment files uploaded to S3"
+          echo "✅ Deployment files uploaded to S3"
 
   provision-green:
     needs: build
@@ -97,9 +97,20 @@ jobs:
           aws ec2 wait instance-running --instance-ids ${{ steps.launch.outputs.instance_id }}
 
           echo "Instance is running. Waiting for initialization to complete..."
-          sleep 180
+          sleep 150
 
-
+          echo "Checking SSM agent status..."
+          for i in {1..30}; do
+            STATUS=$(aws ssm describe-instance-information \
+              --instance-information-filter-list "key=InstanceIds,valueSet=${{ steps.launch.outputs.instance_id }}" \
+              --query 'InstanceInformationList[0].PingStatus' --output text 2>/dev/null || echo "Offline")
+            echo "Attempt $i/30 - SSM Agent Status: $STATUS"
+            if [ "$STATUS" = "Online" ]; then
+              echo "✅ SSM agent is online and ready"
+              exit 0
+            fi
+            sleep 10
+          done
 
           echo "⚠️ SSM agent status check timed out, but continuing..."
 
