--- a/.github/workflows/deploy-ssm.yml
+++ b/.github/workflows/deploy-ssm.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Set image tag
         id: set_tag
         run: |
-          TAG=$(date +'%Y%m%d%H%M%S')
+          TAG=latest
           echo "image_tag=$TAG" >> $GITHUB_OUTPUT
           echo "TAG=$TAG" >> $GITHUB_ENV
 
