--- a/.github/workflows/deploy-ssm.yml
+++ b/.github/workflows/deploy-ssm.yml
@@ -141,7 +141,7 @@ jobs:
             --parameters 'commands=[
               "#!/bin/bash",
               "set -ex",
-              "sudo mkdir -p /home/ubuntu/quotes-app/deployment /home/ubuntu/quotes-app/nginx-config",
+              "sudo mkdir -p /home/ubuntu/quotes-app/deployment",
               "sudo chown -R ubuntu:ubuntu /home/ubuntu/quotes-app",
               "cd /home/ubuntu/quotes-app",
               "echo \"Downloading files from S3...\"",
@@ -153,27 +153,8 @@ jobs:
             ]' \
             --query 'Command.CommandId' \
             --output text)
-
-          echo "Command ID: $COMMAND_ID"
-          MAX_ATTEMPTS=120
-          ATTEMPT=0
-          while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
-            ATTEMPT=$((ATTEMPT + 1))
-            RESULT=$(aws ssm get-command-invocation --command-id "$COMMAND_ID" --instance-id "${{ needs.provision-green.outputs.green_instance_id }}" --region ${{ env.AWS_REGION }} 2>/dev/null || echo '{"Status":"Pending"}')
-            STATUS=$(echo "$RESULT" | jq -r '.Status')
-
-            if [ "$STATUS" = "Success" ]; then
-              exit 0
-            fi
-
-            if [ "$STATUS" = "Failed" ] || [ "$STATUS" = "TimedOut" ] || [ "$STATUS" = "Cancelled" ]; then
-              exit 1
-            fi
-
-            sleep 15
-          done
-
-          exit 1
+          echo "Sent SSM command with Command ID: $COMMAND_ID"
+          sleep 300
 
 
   register-green:
